# zerotrust-ca-powertoys

./: .coverage.FFPTMFGT1CLQ05Q.18267.065814  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: build-and-publish-Pypi.yml  build-and-publish-ghrc.yml  build-and-publish-to-ghrc.yml  build-and-publish-to-pypi.yml  build-artifacts.yml  build-packages.yml  create-draft-release.yml  debug-context.yml  lint-super-linter-all-codebase.yml  lint-super-linter.yml  lint.yml  maintenance-clear_actions_cache.yml  test.yml
docs/: ca-powertoys-overview.drawio
src/ca_pwt/: __about__.py  __init__.py  __main__.py  app.py  applications.py  authentication.py  commands.py  directory_roles.py  groups.py  policies.py  policies_mappings.py  users.py
src/ca_pwt/authentication/: auth_lib.py
src/ca_pwt/conditional_access/: commands.py  mappings.py
src/ca_pwt/groups/: graph_api.py
src/ca_pwt/helpers/: click.py  dict.py  graph_api.py  utils.py
src/ca_pwt/users/: graph_api.py
src/entraid-tools/: __main__.py  authentication.py  conditional_access.py  groups.py  utils.py
src/entraid-tools/authentication/: auth_lib.py  commands.py
src/entraid-tools/conditional_access/: commands.py  graph_api.py
src/entraid-tools/graph_api/: authentication.py  conditional_access.py  groups.py
src/entraid-tools/groups/: commands.py  graph_api.py
src/entraid-tools/helpers/: click.py  dict.py  graph_api.py
src/entraid_tools/: __main__.py
src/entraid_tools/authentication/: __init__.py
src/entraid_tools/conditional_access/: commands.py  graph_api.py
src/entraid_tools/directory_roles/: builtin.py  graph_api.py
src/entraid_tools/groups/: graph_api.py
src/entraid_tools/helpers/: click.py  dict.py  graph_api.py
tests/: cleanup_entity_cmd_test.py  cleanup_entity_cmd_test_utils.py  cleanup_groups_cmd_test.py  cleanup_policies_cmd_test.py  commands_test.py  conftest.py  delete_entity_cmd_test.py  export_entity_cmd_test.py  export_groups_cmd_test.py  export_policies_cmd_test.py  import_entity_cmd_test_utils.py  import_groups_cmd_test.py  import_policies_cmd_test.py  replace_cmds_test.py  test_data.py  utils.py
tests/conditional_access/: commands_test.py  test_data.py
tests/groups/: graph_api_test.py
