[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ca-pwt"
dynamic = ["version"]
description = 'CA-PowerToys is a set of tools to help you manage Conditional Access policies. It is a command line tool that can be used to export, import, and clean up Conditional Access policies and associated Groups'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["azure", "entraid", "conditional-access", "policies", "azure-ad", "microsoft"]
authors = [
  { name = "0x6f677546 (Hugo Batista)"},
]
classifiers = [
  "Operating System :: OS Independent",
  "Topic :: Software Development",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "requests>=2.31.0",
  "msal>=1.24.1",
  "click>=8.1.7",
  "types-requests>=2.31.0",
]

[project.scripts]
ca-pwt = "ca_pwt:entrypoint"

[project.urls]
Documentation = "https://github.com/0x6f677548/ca-pwt#readme"
Issues = "https://github.com/0x6f677548/ca-pwt/issues"
Source = "https://github.com/0x6f677548/ca-pwt"

[tool.hatch.version]
path = "src/ca_pwt/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest --access_token $(ca-pwt acquire-token --output_token {args:tests})"
test-cov = "coverage run -m pytest --access_token $(ca-pwt acquire-token --output_token {args:tests})"
cov-report = [
  "- coverage combine",
  "coverage report",
  "coverage html",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --ignore-missing-imports --install-types --non-interactive {args:src/ca_pwt tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore Import block is un-sorted or un-formatted
  "I001",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["ca_pwt"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["ca_pwt", "tests"]
branch = true
parallel = true
omit = [
  "src/ca_pwt/__about__.py",
]

[tool.coverage.paths]
ca_pwt = ["src/ca_pwt", "*/ca-pwt/src/ca_pwt"]
tests = ["tests", "*/ca-pwt/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
